--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,9 @@ anyio==4.9.0
 asyncpg==0.30.0
 attrs==25.3.0
 certifi==2025.8.3
+cffi==1.17.1
 click==8.2.1
+cryptography==45.0.6
 fastapi==0.116.1
 frozenlist==1.7.0
 greenlet==3.2.4
@@ -22,9 +24,12 @@ Mako==1.3.10
 MarkupSafe==3.0.2
 multidict==6.6.4
 propcache==0.3.2
+pycparser==2.22
 pydantic==2.11.7
 pydantic-settings==2.10.1
 pydantic_core==2.33.2
+PyJWT==2.9.0
+PyNaCl==1.5.0
 python-dotenv==1.1.1
 sniffio==1.3.1
 SQLAlchemy==2.0.43
